<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Games Backlog Fragment</string>
    <string name="second_fragment_label">Add Game Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title2">Ti</string>
    <string name="Platform">Platform</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="plusicon">plusIcon</string>
    <string name="title">Title</string>
    <string name="saveIcon">Save Icon</string>
    <string name="not_valid_game">Game is not valid. Please check the details</string>
    <string name="deleteAll">deleteAll</string>
    <string name="action_delete_all">Delete All</string>
    <string name="not_valid_game_title">Please fill in a valid game title</string>
    <string name="not_valid_game_portal">Please fill in a valid game platform</string>
    <string name="not_valid_game_day">Please fill in a valid day</string>
</resources>